# BunGesture

./: .gitignore  README.md  textgrid  textgrid.ipynb
BunGesture/: pyproject.toml
BunGesture/bungesture/: main.py
BunGesture/data/custom/: process_text.py
BunGesture/diffusion/: gaussian_diffusion.py  resample.py
BunGesture/model/: mdm.py
BunGesture/model/local_attention/: local_attention.py  transformer.py
BunGesture/mydiffusion_beat_twh/: end2end.py  sample.py
BunGesture/mydiffusion_beat_twh/data_loader/: h5_data_loader.py
BunGesture/process/: calculate_gesture_statistics.py  process_BEAT_bvh.py  process_TWH_bvh.py  tool.py
BunGesture/process/WavLM/: WavLM.py
BunGesture/process/pymo/: preprocessing.py
BunGesture/train/: training_loop.py
BunGesture/utils/: model_util.py
BunGesture/visualization/bvh2fbx/: bvh2fbx.py
BunGesture/visualization/bvh2fbx/Rendered/: 2_scott_0_1_1_generated.fbx
docs/: index.html
